<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_1"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_nav_home_home"/>

        <item
            android:id="@+id/nav_item_2"
            android:icon="@drawable/icon_depositar"
            android:title="@string/menu_nav_home_Deposit"/>

        <item
            android:id="@+id/nav_item_3"
            android:icon="@drawable/icon_retirar"
            android:title="@string/menu_nav_home_Draw"/>

        <item
            android:id="@+id/nav_item_4"
            android:icon="@drawable/icon_transferir"
            android:title="@string/menu_nav_home_Trans"/>

        <item
            android:id="@+id/nav_item_5"
            android:icon="@drawable/icon_plazo_fijo"
            android:title="@string/menu_nav_home_Plazo_Fijo"/>

        <item
            android:id="@+id/nav_item_6"
            android:icon="@drawable/icon_logout"
            android:title="@string/menu_nav_home_Exit"/>
    </group>
</menu>