<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SecondFragment">

    <TextView
        android:id="@+id/tvTitleDeposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/violet"
        android:text="@string/menu_nav_home_Deposit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etDeposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/icon_depositar"
        android:hint="@string/deposit_hint"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/colorBackground"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDeposit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDepositText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDeposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deposit_btn"
        android:backgroundTint="@color/violet"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/etDeposit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>