<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDniLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/icon_dni"
        android:hint="@string/et_hint_dni"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/colorBackground"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDniLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/icon_password"
        android:hint="@string/et_hint_pass"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/colorBackground"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/layoutDniLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPasswordLogin"
        app:layout_constraintBottom_toTopOf="@id/btnLogin">

    </com.google.android.material.checkbox.MaterialCheckBox>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:backgroundTint="@color/violet"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbRecordar" />



</androidx.constraintlayout.widget.ConstraintLayout>