<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            tools:context=".fragments.RegisterFragment">


            <ImageView
                android:id="@+id/imgET"
                android:layout_width="108dp"
                android:layout_height="109dp"
                android:layout_marginStart="16dp"
                android:src="@mipmap/etdedofondo"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvTitleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/imgET"
                android:text="@string/tv_title_register"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="32sp" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNomApe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/icon_nom_ape"
            android:hint="@string/et_hint_nomApe"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/colorBackground"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/rlTitulo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNomApe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/icon_email"
            android:hint="@string/et_hint_email"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/colorBackground"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutNomApe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layoutDni">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailSubject"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/icon_dni"
            android:hint="@string/et_hint_dni"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/colorBackground"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layoutTel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/icon_cel"
            android:hint="@string/et_hint_tel"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/colorBackground"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutDni"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/icon_password"
            android:hint="@string/et_hint_pass"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/colorBackground"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/layoutTel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layoutConfirmPass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutConfirmPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:startIconDrawable="@drawable/icon_password"
            android:hint="@string/et_hint_confirmPass"
            android:inputType="textPassword"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/colorBackground"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrate"
            android:backgroundTint="@color/violet"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutConfirmPass" />


    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>